src/global/core-modules/emr-server-mgmt/objects/EmrServerInboundRequestEvent__e/EmrServerInboundRequestEvent__e.object-meta.xml
<CustomObject>
    <description>Platform Event object used to track and process every single inbound operation coming from external EMR servers.</description>
    <label>EMR Server Inbound Request Event</label>
    <pluralLabel>EMR Server Inbound Request Events</pluralLabel>
</CustomObject>