src/global/core-modules/emr-server-mgmt/objects/EmrServerInboundRequestEvent__e/fields/EmrServerId__c.field-meta.xml
<CustomField>
    <fullName>EmrServerId__c</fullName>
    <label>EMR Server Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>