src/global/core-modules/emr-server-mgmt/objects/EmrServerInboundRequestEvent__e/fields/Identifier__c.field-meta.xml
<CustomField>
    <fullName>Identifier__c</fullName>
    <label>Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>