src/global/core-modules/emr-server-mgmt/objects/EmrServerInboundRequestEvent__e/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <label>Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>