src/global/core-modules/emr-server-mgmt/objects/EmrServerInboundRequestEvent__e/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <label>Resource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>